chore(api): drop twelve filters that are not slots of their class
